--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
       
    <style>
      body{
-      background-image:url(sea.jpg);
+      background-image:url(./images/sea.jpg);
       background-size:100%
       background-repeat:no-repeat;
       height:3000px;
