--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@
    <style>
      body{
       background-image:url(./images/sea.jpg);
-      background-repeat:no-repeat;
-      background-attachment:fixed;
+      background-repeat: no-repeat;
+      background-attachment: fixed;
+      background-size: cover;
      }
      
    </style>
