--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
   <body>
     <div class="nav">
       <div class="nav-title">Give us your feedback!</div>
-      <div class="nav-subtitle">Please feel free to give me your opinions or thoughts if there's any modification needed.</div>
+      <div class="nav-subtitle">Please feel free to give us your opinions or thoughts if there's any modification needed on our website.</div>
     </div>
     <div class="menu">
       <div class="menu-item"></div>
