--- a/index.html
+++ b/index.html
@@ -27,8 +27,9 @@
      .nav-subtitle{
        color: white;
        margin-right: auto;
-       font-size: 1.25rem;
-       font-weight: 300;       
+       font-size: 1.3rem;
+       font-weight: 300;
+       margin-top: 15px;
      }
      
    </style>
@@ -37,7 +38,8 @@
   <body>
     <div class="nav">
       <div class="nav-title">Give us your feedback!</div>
-      <div class="nav-subtitle">Please feel free to give us your opinions or thoughts if there's any modification needed on our website.</div>
+      <div class="nav-subtitle">Please feel free to give us your opinions or thoughts</br>
+      if there's any modification needed on our website.</div>
     </div>
     <div class="menu">
       <div class="menu-item"></div>
