--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
        color: white;
        text-align: center;
        font-size: 1.3rem;
-       font-weight: 400;
+       font-weight: 350;
        margin-top: 13px;
      }
      
@@ -38,7 +38,8 @@
   <body>
     <div class="nav">
       <div class="nav-title">Give us your feedback!</div>
-      <div class="nav-subtitle">Please feel free to give us your opinions or thoughts if there's any modification needed on our website.</div>
+      <div class="nav-subtitle">Please feel free to give us your opinions or thoughts</br>
+      if there's any modification needed on our website.</div>
     </div>
     <div class="menu">
       <div class="menu-item"></div>
