--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
        width: 1000px;
        margin: auto;
        margin-top: 50px;
+       background-color: #FAECCA;
      }
      
    </style>
