--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
      .main{
        width: 1000px;
        margin: auto;
+       text-align: center;
        margin-top: 50px;
        background-color: #FAECCA;
      }
