--- a/index.html
+++ b/index.html
@@ -43,6 +43,11 @@
        background-color: #FAECCA;
      }
      
+     .input{
+       width: 440px;
+       font-size: 16px;
+     }
+     
    </style>
   </head>
   
