--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
        background-color: #FAECCA;
      }
      
-     .input{
+     input{
        width: 800px;
        font-size: 16px;
      }
