--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
      }
      
      input{
-       width: 800px;
+       width: 600px;
        height: 90px;
        font-size: 16px;
      }
@@ -66,6 +66,7 @@
     <div class="main">
       
       <form>
+        <h4>Comment</h4>
         <input type="text" id="item" autofocus="true">
         <button type="button" id="add" class="addBtn">ADD</button>
       </form>
