--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
        background-color: #FAECCA;
      }
      
-     .comment{
+     .comment{       
        display: flex;
        margin: auto;
        text-align: center;       
@@ -51,6 +51,7 @@
      }
      
      .commnet-item{
+       width: 100px;
        margin-left: 5px;
        color: grey;
        margin: auto;
