--- a/index.html
+++ b/index.html
@@ -84,7 +84,8 @@
         <h4>Comment</h4>
         </div>
         <form>
-         <input type="text" id="item" autofocus="true">
+         <!-- <input type="text" id="item" autofocus="true"> -->
+         <textarea id="item" rows="8" cols="80" autofocus="true"></textarea>
          <button type="button" id="add" class="addBtn">ADD</button>
         </form>
       </div>
