--- a/index.html
+++ b/index.html
@@ -63,6 +63,10 @@
        font-size: 16px;       
      }
      
+     form{
+       background-color: blue;
+     }
+     
    </style>
   </head>
   
