--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
         </div>
         <form>
          <!-- <input type="text" id="item" autofocus="true"> -->
-         <textarea id="item" rows="8" cols="80" autofocus="true"></textarea>
+         <textarea id="item" rows="8" cols="80" style="resize:none;" autofocus="true"></textarea>
          <button type="button" id="add" class="addBtn">ADD</button>
         </form>
       </div>
