--- a/index.html
+++ b/index.html
@@ -47,7 +47,8 @@
        width: 1000px;
        display: flex;
        margin: auto;
-       text-align: center;       
+       text-align: center;     
+       background-color: yellow;
      }
      
      .commnet-item{
