--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
      
      .comment{       
        width: 1000px;
+       height: 800px;
        display: flex;
        margin: auto;
        text-align: center;     
