--- a/index.html
+++ b/index.html
@@ -80,6 +80,7 @@
       <div class="nav-subtitle">Please feel free to give us your opinions or thoughts</br>
       if there's any modification needed on our website.</div>
     </div>
+  
     <div class="menu">
       <div class="menu-item"></div>
       <div class="menu-item"></div>
@@ -89,10 +90,9 @@
       
       <div class="comment">     
         <div class="commnet-item">           
-        <h4>Comment</h4>
+        Comment
         </div>
         <form>
-         <!-- <input type="text" id="item" autofocus="true"> -->
          <textarea id="item" rows="8" cols="80" style="resize:none;" autofocus="true"></textarea>
          <button type="button" id="add" class="addBtn">ADD</button>
         </form>
