--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
      
      .comment{       
        width: 1000px;
-       height: 800px;
+       height: 180px;
        display: flex;
        margin: auto;
        text-align: center;     
@@ -89,10 +89,8 @@
     <div class="main">
       
       <div class="comment">     
-        <div class="commnet-item">           
-        Comment
-        </div>
         <form>
+         <label style="color:grey;">Comment</label>
          <textarea id="item" rows="8" cols="80" style="resize:none;" autofocus="true"></textarea>
          <button type="button" id="add" class="addBtn">ADD</button>
         </form>
