--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
       
       <div class="comment">     
         <form>
-         <label style="color:grey;">Comment</label>
+         <label style="color:grey; vertical-align=top;">Comment</label>
          <textarea id="item" rows="8" cols="80" style="resize:none;" autofocus="true"></textarea>
          <button type="button" id="add" class="addBtn">ADD</button>
         </form>
