--- a/index.html
+++ b/index.html
@@ -67,6 +67,7 @@
        background-color: blue;
        margin-top: 20px;
        margin: auto;
+       vertical-align=top;
      }
      
      ul{
@@ -92,7 +93,7 @@
       
       <div class="comment">     
         <form>
-         <label style="color:grey; vertical-align=top;">Comment</label>
+         <label style="color:grey;">Comment</label>
          <textarea id="item" rows="8" cols="80" style="resize:none;" autofocus="true"></textarea>
          <button type="button" id="add" class="addBtn">ADD</button>
         </form>
