--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
       
       <div class="comment">     
         <form>
-         <label style="color:grey;">Comment</label>
+         <label for="item" style="color:grey;">Comment</label>
          <textarea id="item" rows="8" cols="80" style="resize:none;" autofocus="true"></textarea>
          <button type="button" id="add" class="addBtn">ADD</button>
         </form>
