--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
       <div class="comment">     
         <form>
          <label for="item" style="color:grey;">Comment</label>
-         <textarea id="item" rows="8" cols="80" style="resize:none;" autofocus="true"></textarea>
+         <textarea id="item" rows="8" cols="80" style="resize:none; vertical-align: top;" autofocus="true"></textarea>
          <button type="button" id="add" class="addBtn">ADD</button>
         </form>
       </div>
