--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
        margin: auto;
        text-align: center;     
        background-color: white;
+       border-radius: 4.5px;
      }
      
      .commnet-item{
