--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
        margin: auto;
        text-align: center;
        margin-top: 50px;
-       background-color: #FAECCA;
+
      }
      
      .comment{       
@@ -94,7 +94,7 @@
       <div class="comment">     
         <form>
          <label for="item" style="color:grey; font-weight=3;">Comment</label>
-         <textarea id="item" rows="8" cols="80" style="resize:none; vertical-align: middle;" autofocus="true"></textarea>
+         <textarea id="item" rows="8" cols="80" style="resize:none; vertical-align: middle; outline:none;" autofocus="true"></textarea>
          <button type="button" id="add" class="addBtn">ADD</button>
         </form>
       </div>
