--- a/index.html
+++ b/index.html
@@ -75,6 +75,10 @@
        background: rgba(0,0,0,0.5);
      }
      
+     ul li{
+       background: rgba(255,255,255,0.5);
+     }
+     
    </style>
   </head>
   
