--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
      }
      
      .main{
-       width: 1000px;
+       width: 850px;
        margin: auto;
        text-align: center;
        margin-top: 50px;
@@ -60,7 +60,7 @@
        margin: auto;
      }
      
-     label{
+     .item{
        style=color:grey; 
        font-weight: 8;
      }
