--- a/index.html
+++ b/index.html
@@ -73,6 +73,8 @@
        margin-top: 20px;
        margin: auto;
        vertical-align=top;
+       color: grey; 
+       font-weight: 10;
      }
      
      ul{
