--- a/index.html
+++ b/index.html
@@ -74,7 +74,8 @@
        margin: auto;
        vertical-align=top;
        color: grey; 
-       font-weight: 600;
+       font-weight: 570;
+       font-size: 20px;
      }
      
      ul{
@@ -112,7 +113,7 @@
         <form>
          <label for="item">Comment</label>
          <textarea id="item" rows="8" cols="80" style="resize:none; vertical-align: middle; outline:none;" autofocus="true"></textarea>
-         <button type="button" id="add" class="addBtn">ADD</button>
+         <button type="button" id="add" class="addBtn" style="font-size:10;">ADD</button>
         </form>
       </div>
       
