--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
        display: flex;
        margin: auto;
        text-align: center;     
-       background: rgba(255,255,255,50);
+       background: rgba(255,255,255,0.5);
        border-radius: 5.5px;
      }
      
@@ -61,7 +61,7 @@
        margin-top: 20px;
        margin: auto;
        vertical-align=top;
-       color: grey; 
+       color: #D5D5D5; 
        font-weight: 550;
        font-size: 15px;
      }
@@ -99,7 +99,7 @@
       
       <div class="comment">     
         <form>
-         <label for="item">Comment</label>
+         <label for="item" style="padding:10px;">Comment</label>
          <textarea id="item" rows="8" cols="80" style="resize:none; vertical-align: middle; outline:none;" autofocus="true"></textarea>
          <button type="button" id="add" class="addBtn" style="font-size:10;">ADD</button>
         </form>
