--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
        display: flex;
        margin: auto;
        text-align: center;     
-       background: rgba(255,255,255,0.5);
+       background: rgba(255,255,255,0.7);
        border-radius: 5.5px;
      }
      
@@ -61,9 +61,9 @@
        margin-top: 20px;
        margin: auto;
        vertical-align=top;
-       color: #D5D5D5; 
+       color: #F6F6F6; 
        font-weight: 550;
-       font-size: 15px;
+       font-size: 18px;
      }
      
      ul{
