--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
      
      .Feedback{
        font-size:95px;
-       color:#FFCAD8;
+       color:#FDC3CF;
      }
      
      .nav-subtitle{
@@ -68,7 +68,7 @@
        margin: auto;
        vertical-align=top;
        color: #ABABAB; 
-       font-weight: 500;
+       font-weight: 600;
        font-size: 18px;
        font-family: 'Montserrat', sans-serif;
      }
