--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
      
      .Feedback{
        font-size:95px;
-       color:#FF657F;
+       color:#FF97A8;
      }
      
      .nav-subtitle{
@@ -69,7 +69,7 @@
        margin-top: 20px;
        margin: auto;
        vertical-align=top;
-       color: #ABABAB; 
+       color: #999999; 
        font-weight: 500;
        font-size: 18px;
        font-family: 'Montserrat', sans-serif;
