--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
      
      .Feedback{
        font-size:95px;
-       color:#FFABB3;
+       color:#FFD5DA;
      }
      
      .nav-subtitle{
@@ -70,7 +70,7 @@
        margin: auto;
        vertical-align=top;
        color: #999999; 
-       font-weight: 500;
+       font-weight: 600;
        font-size: 17px;
        font-family: 'Montserrat', sans-serif;
      }
