--- a/index.html
+++ b/index.html
@@ -62,6 +62,10 @@
        border-radius: 5.5px;
      }
      
+     .blank{
+       margin-top: 15px;
+     }
+     
      input{
        font-size: 16px;       
      }
