--- a/index.html
+++ b/index.html
@@ -117,6 +117,10 @@
             <label for="name-item" style="padding:8px;">Name</label>          
             <input type="text" id="name-item"><br>
          </div>
+         <div class="email">
+            <label for="email-item" style="padding:8px;">Name</label>          
+            <input type="text" id="email-item"><br>
+         </div>
          <div class="blank">
          <label for="item" style="padding:8px;">Comment</label>
          <textarea id="item" rows="8" cols="80" style="resize:none; vertical-align: middle; outline:none;" autofocus="true"></textarea>
