--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
             <input type="text" id="name-item"><br>
          </div>
          <div class="email">
-            <label for="email-item" style="padding:8px;">Name</label>          
+            <label for="email-item" style="padding:8px;">E-mail</label>          
             <input type="text" id="email-item"><br>
          </div>
          <div class="blank">
