--- a/index.html
+++ b/index.html
@@ -61,6 +61,9 @@
        border-radius: 5.5px;
      }
      
+     .email{
+       margin-top: 13px;
+     }
      .blank{
        margin-top: 13px;
      }
