--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
         <form>
          <div class="name">
             <label for="nameItem" style="padding:8px;">Name</label>          
-            <input type="text" id="name-item"><br>
+            <input type="text" id="nameItem"><br>
          </div>
          <div class="email">
             <label for="emailItem" style="padding:8px;">E-mail</label>          
