--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
           output = 'No comment';
         }
         
-        itemList.push(item); //itemList 배열 끝에 item 변숫값 
+        itemList.push(output); //itemList 배열 끝에 item 변숫값 
         document.querySelector("#item").value=""; //id="item" 인 요소 값을 지움
         document.querySelector("#item").focus(); //텍스트 필드에 focus() 함수적용
 
