--- a/index.html
+++ b/index.html
@@ -127,16 +127,16 @@
         <form>
           <table>
             <tr>
-              <td id="name" style="padding:8px;">Name</td>
+              <td id="name" style="padding:8px; text-align: right;">Name</td>
               <td><input type="text" id="nameItem"></td>
               <td rowspan="3"><button type="button" id="add" class="addBtn" style="font-size:10;">ADD</button></td>          
             </tr>
             <tr>
-              <td id="email" style="padding:8px;">E-mail</td>
-              <td><input type="text" id="emailItem"><br></td>
+              <td id="email" style="padding:8px; text-align: right;">E-mail</td>
+              <td style="text-align: left;"><input type="text" id="emailItem"><br></td>
             </tr>
             <tr>
-              <td id="blank" style="padding:8px;">Comment</td>
+              <td id="blank" style="padding:8px; text-align: right;">Comment</td>
               <td><textarea id="item" rows="8" cols="80" style="resize:none; vertical-align: middle; outline:none;" autofocus="true"></textarea></td>
             </tr>
           </table>
