--- a/index.html
+++ b/index.html
@@ -127,16 +127,16 @@
         <form>
           <table>
             <tr>
-              <td id="name" style="text-align: right;">Name</td>
+              <td id="name" style="text-align: right; padding:4px;">Name</td>
               <td style="text-align: left;"><input type="text" id="nameItem"></td>
-              <td rowspan="3" style="text-align: right;"><button type="button" id="add" class="addBtn" style="font-size:10; height:55px">ADD</button></td>          
+              <td rowspan="3" style="padding:3px; text-align: right;"><button type="button" id="add" class="addBtn" style="font-size:10; height:55px;">ADD</button></td>          
             </tr>
             <tr>
-              <td id="email" style="text-align: right;">E-mail</td>
+              <td id="email" style="text-align: right; padding:4px;">E-mail</td>
               <td style="text-align: left;"><input type="text" id="emailItem"><br></td>
             </tr>
             <tr>
-              <td id="blank" style="text-align: right;">Comment</td>
+              <td id="blank" style="text-align: right; padding:4px;">Comment</td>
               <td style="text-align: left;"><textarea id="item" rows="8" cols="80" style="resize:none; vertical-align: middle; outline:none;" autofocus="true"></textarea></td>
             </tr>
           </table>
